--- a/marvel-internalpage.html
+++ b/marvel-internalpage.html
@@ -12,13 +12,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/styles/all.css" />
@@ -161,7 +159,7 @@
     </div>
     <div class="final-trailer m-y-35">
       <div class="container">
-        <p class="m-y-35 skew-brow">FINAL TRAILER</p>
+        <p class="m-y-35 skew-brow open-title">FINAL TRAILER</p>
         <div class="trailer-bg relative">
           <ul class="top-list flex-x align-center space-between p-20">
             <li class="flex-x gap-20 align-center">
@@ -208,7 +206,7 @@
     </div>
     <div class="latest-news p-y-1050">
       <div class="container">
-        <p class="m-y-35 skew-brow c-f p">LATEST NEWS</p>
+        <p class="m-y-35 skew-brow c-f open-title">LATEST NEWS</p>
         <ul class="flex-x align-center gap-10">
           <li class="col-3">
             <div class="img-wrapper">
@@ -271,7 +269,7 @@
     </div>
     <div class="overview-text-box container">
       <div class="overview-content p-100">
-        <p class="skew-brow m-b-60">OVERVIEW</p>
+        <p class="skew-brow m-b-60 open-title">OVERVIEW</p>
         <div class="description flex-x gap-30 align-start">
           <div class="text flex-y align-center gap-30 col-8">
             <p class="m-b-40">
@@ -341,7 +339,7 @@
     </div>
     <div class="photo-gallery m-b-40">
       <div class="container">
-        <p class="skew-brow m-b-60 uppercase">Gallery</p>
+        <p class="skew-brow m-b-25 uppercase open-title">Gallery</p>
         <ul>
           <li><img src="assets/photos/internal-page/5.jpg" /></li>
           <li><img src="assets/photos/internal-page/6.jpg" /></li>
@@ -365,7 +363,7 @@
     </div>
     <div class="characters m-y-50">
       <div class="container">
-        <div class="skew-brow updates m-y-35">CHARACTERS</div>
+        <div class="skew-brow updates m-y-35 open-title">CHARACTERS</div>
         <ul class="flex-x gap-15">
           <li class="col-6 c-f">
             <div class="hover-box relative">
@@ -375,7 +373,7 @@
                   src="assets/photos/internal-page/c1.jpeg"
                 />
               </div>
-              <div class="text p-10">
+              <div class="text uppercase">
                 <p>Captain marvel</p>
               </div>
             </div>
@@ -388,8 +386,8 @@
                   src="assets/photos/internal-page/c2.jpeg"
                 />
               </div>
-              <div class="text p-10">
-                <p>Captain marvel</p>
+              <div class="text uppercase">
+                <p>MONICA RAMBEAU</p>
               </div>
             </div>
           </li>
@@ -401,8 +399,8 @@
                   src="assets/photos/internal-page/c3.jpeg"
                 />
               </div>
-              <div class="text p-10">
-                <p>Captain marvel</p>
+              <div class="text uppercase">
+                <p>MS. MARVEL</p>
               </div>
             </div>
           </li>
@@ -414,8 +412,8 @@
                   src="assets/photos/internal-page/c4.jpeg"
                 />
               </div>
-              <div class="text p-10">
-                <p>Captain marvel</p>
+              <div class="text uppercase">
+                <p>NICK FURY</p>
               </div>
             </div>
           </li>
@@ -427,8 +425,8 @@
                   src="assets/photos/internal-page/c5.jpeg"
                 />
               </div>
-              <div class="text p-10">
-                <p>Captain marvel</p>
+              <div class="text uppercase">
+                <p>GOOSE THE CAT</p>
               </div>
             </div>
           </li>
@@ -440,8 +438,8 @@
                   src="assets/photos/internal-page/c6.jpeg"
                 />
               </div>
-              <div class="text p-10">
-                <p>Captain marvel</p>
+              <div class="text uppercase">
+                <p>PRINCE YAN</p>
               </div>
             </div>
           </li>
@@ -450,7 +448,7 @@
     </div>
     <div class="official-trailer m-t-100">
       <div class="container">
-        <p class="m-y-35 skew-brow">FINAL TRAILER</p>
+        <p class="m-y-35 skew-brow open-title">FINAL TRAILER</p>
         <div class="trailer-bg relative">
           <ul class="top-list flex-x align-center space-between p-20">
             <li class="flex-x gap-20 align-center">
@@ -467,9 +465,7 @@
             </li>
             <li class="flex-x gap-20">
               <div class="watch-icon flex-y align-center gap-10">
-                <!-- <div class="icon"> -->
                 <a href="#" class="fa-solid fa-clock icon"></a>
-                <!-- </div> -->
                 <div class="text">
                   <a href="#"> Watch later</a>
                 </div>
@@ -499,7 +495,7 @@
     </div>
     <div class="posters m-t-100">
       <div class="container">
-        <p class="skew-brow m-b-60 uppercase">posters</p>
+        <p class="skew-brow m-y-25 uppercase open-title">posters</p>
         <ul>
           <li><img src="assets/photos/internal-page/p1.jpeg" /></li>
           <li><img src="assets/photos/internal-page/p2.jpeg" /></li>
@@ -512,7 +508,7 @@
     </div>
     <div class="teaser-trailer m-t-100">
       <div class="container">
-        <p class="m-y-35 skew-brow">TEASER TRAILER</p>
+        <p class="m-y-25 skew-brow open-title">TEASER TRAILER</p>
         <div class="trailer-bg relative">
           <ul class="top-list flex-x align-center space-between p-20">
             <li class="flex-x gap-20 align-center">
@@ -561,17 +557,17 @@
     </div>
     <div class="related-movie m-t-80 m-b-30">
       <div class="container">
-        <p class="skew-brow m-b-30">RELATED MOVIE</p>
+        <p class="skew-brow m-b-30 open-title">RELATED MOVIE</p>
         <ul class="flex-x align-start gap-100">
           <li class="col-4">
             <div class="img-wrapper">
               <img src="assets/photos/internal-page/rm.jpeg" />
             </div>
           </li>
-          <li class="col-8">
-            <div class="content col-8">
+          <li class="col-6">
+            <div class="content col-8 m-t-40">
               <h2 class="m-b-10">Captain Marvel</h2>
-              <span class="m-b-10 i-b">2019</span>
+              <span class="m-b-20 i-b">2019</span>
               <p class="m-b-20">
                 Set in the 1990s, Marvel Studios' "Captain Marvel" is an all-new
                 adventure from a previously unseen period in the history of the
