--- a/marvel-moviepage.html
+++ b/marvel-moviepage.html
@@ -12,15 +12,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="assets/styles/all.css" />
     <link rel="stylesheet" href="assets/styles/brands.css" />
     <link rel="stylesheet" href="assets/styles/fontawesome.css" />
@@ -251,7 +250,7 @@
     </div>
     <div class="latest-movies m-y-50">
       <div class="container">
-        <h2 class="skew-brow m-y-35">LATEST MOVIES NEWS</h2>
+        <h2 class="skew-brow m-y-35 open-title">LATEST MOVIES NEWS</h2>
 
         <ul class="flex-x align-center gap-10 m-b-40">
           <li class="col-3">
@@ -328,7 +327,7 @@
     </div>
     <div class="marvel-movies m-t-100">
       <div class="container">
-        <h2 class="skew-brow m-y-50">MARVEL MOVIES</h2>
+        <h2 class="skew-brow m-y-30 open-title">MARVEL MOVIES</h2>
         <ul>
           <li>
             <a href="#">
@@ -732,7 +731,7 @@
     </div>
     <div class="other-movies">
       <div class="container">
-        <h2 class="skew-brow uppercase m-y-35">OTHER MOVIES</h2>
+        <h2 class="skew-brow uppercase m-y-35 open-title">OTHER MOVIES</h2>
         <ul>
           <li>
             <a href="#">
