--- a/marvel-searchpage.html
+++ b/marvel-searchpage.html
@@ -12,15 +12,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="assets/styles/all.css" />
     <link rel="stylesheet" href="assets/styles/brands.css" />
     <link rel="stylesheet" href="assets/styles/fontawesome.css" />
@@ -243,7 +242,7 @@
     </div>
     <div class="latest-videos">
       <div class="container">
-        <h2 class="skew-brow uppercase m-y-35">latest videos</h2>
+        <h2 class="skew-brow uppercase m-y-35 open-title">latest videos</h2>
         <ul class="flex-x align-center gap-10 m-b-40">
           <li class="col-3">
             <div class="img-wrapper relative">
